--- a/web/css/plterm.css
+++ b/web/css/plterm.css
@@ -7,6 +7,7 @@ span.pl-atom		{}
 span.pl-quoted-atom	{color:#000080;}
 span.pl-string		{color:#000080;}
 span.pl-int		{}
+span.pl-rational	{}
 span.pl-float		{}
 span.pl-curl		{}
 span.pl-compound	{}
